--- a/css/styles.css
+++ b/css/styles.css
@@ -627,6 +627,58 @@ h2 {
   background-color: rgba(33, 150, 243, 1);
 }
 
+.footer-email {
+  width: 358px;
+  margin-left: 93px;
+}
+
+.footer-email-field {
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background: transparent;
+  padding-left: 16px;
+}
+
+.E-mail {
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: 12px;
+  position: relative;
+}
+
+.subscribe-button {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 28px;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin-top: 3px;
+}
+
+.subscribe-icon {
+  position: absolute;
+  right: 28px;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -658,6 +710,7 @@ h2 {
   width: 528px;
   height: 581px;
   background-color: #ffffff;
+  padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -679,6 +732,170 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+  fill: var(--accent-color);
+}
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: #2196f3;
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-field {
+  margin-bottom: 10px;
+}
+
+.modal-input-container {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-text:focus {
+  border-color: #2196f3;
+  outline: none;
+}
+
+.modal-input::placeholder {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.user-agreement-label {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.agreement-link {
+  margin-left: 4px;
+  color: #2196f3;
+}
+.agreement-icon {
+  fill: transparent;
+}
+
+.user-agreement-label span {
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 3px;
+  margin-right: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-agreement:checked + .user-agreement-label span {
+  background-color: #188ce8;
+  border: none;
+}
+
+.user-agreement:focus + .user-agreement-label span {
+  border-color: var(--button-background-color-1);
+}
+
+.user-agreement:checked + .user-agreement-label .agreement-icon {
+  fill: var(--accent-color);
+}
+
+/* .user-agreement-label::before {
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  margin-right: 5px;
+} */
+
+/* .user-agreement:checked + .user-agreement-label::before {
+  background-color: #188ce8;
+  border: none;
+} */
+.submit-button-position {
+  display: flex;
+  justify-content: center;
+}
+
+.submit-button {
+  width: 200px;
+  height: 50px;
+  background: #188ce8;
+  border: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submit-button-text {
+  font-weight: 700;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
 }
 
 /*--------------portfolio-page------------------*/
